<resources>
    <string name="app_name">Hello World</string>
    <string name="pagina">Pagina</string>
    <string name="textview">TextView</string>
    <string name="hint">hint</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="volver">Volver</string>
    <string name="carrera">Carrera</string>
    <string name="curso">Curso</string>
    <string name="agregar">AGREGAR</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="codigo">Codigo</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="cursos">CURSOS</string>
</resources>